# vcfutil

./: LICENSE  README.md  pyproject.toml
src/vcfutil/: __init__.py  calc_wind_daf.py  dataset.py  extract_high_daf.py  vcf.py  vcfutil.py
tests/data/: pop1.txt  pop2.txt  sample.vcf
