[project]
name = "vcfutil"
version = "0.0.4"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ymat2", email = "ymat2@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
vcfutil = "vcfutil.vcfutil:main"

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.12.12",
]
